--- a/src/svg/preloader.html
+++ b/src/svg/preloader.html
@@ -301,7 +301,7 @@ html {
     padding: 0;
     margin-bottom: 50px;
 }
-.icons-for-projects .fas{
+.icons-for-products .fas{
     font-size: 3rem;
 }
     .project-box{
@@ -363,7 +363,7 @@ html {
     html {
         font-size: 45%;
     }
-    .skills-section,.about-section,.projects-section-div{
+    .skills-section,.about-section,.products-section-div{
         width: 80%;
     }
   }
